# magnet-migrade

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  alembic.ini  binance.py  bybit.py  docker-compose.yml  pyproject.toml  sa.py  sample.py  todo.md
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 20210111_220218_.py  20210120_074454_.py  20210208_182036_.py  20210211_223817_.py  20210212_002348_.py  20210212_004114_.py  20210212_004222_.py  20210306_082645_.py  20210306_150804_.py  20210306_151508_.py  20210306_212825_.py  20210307_155307_.py  20210307_155406_.py  20210310_183119_.py  20210312_123136_.py  20210312_180737_.py  (+43 more)
doc/: openapi.yml
estypes/: __init__.py
framework/: __init__.py  analyzers.py  converters.py  decorators.py  interfaces.py  scheduler.py  types.py  workers.py
jupyter/: ccxt.ipynb  ohlc.ipynb
libs/: __init__.py  undefined.py  worker.py
magnet/: README.md  README_TRADE.md  __init__.py  __main.py  commons.py  config.py  crawler.py  database.py  driver.py  errors.py  models.py  schemas.py  worker.py
pandemic/: README.md  __init__.py  field.py  normalizers.py  pandemic_fastapi.py  signaturebuilder.py
pp/: __init__.py  protocols.py  types.py
pytrade/: README.md  algorithms.py  builder.py  calculator.py  interfaces.py  portfolio.py  properties.py  schedulers.py  stream.py  usecase.py
rabbitmq/: __init__.py  app.py  mock.py  schemas.py
supervisor/: fastapi.conf  sshd.conf
tests/: README.md  test_binance.py  test_platform.py
trade_api/: README.md  schemas.py  utils.py
(+200 files in other folders)
