[tool.poetry]
name = "fastapi_docker_template"
version = "0.1.0"
description = ""
authors = ["yourname <yourname@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"
psycopg2-binary = "^2.8.6"
alembic = "^1.4.3"
typer = "^0.3.2"
python-dotenv = "^0.15.0"
pandas = "^1.2.0"
# passlib = "^1.7.4"
# pyjwt = "^2.0.0"
tzlocal = "^2.1"
Inflector = "^3.0.1"
fastapi-utils = "^0.2.1"
pika = "^1.1.0"
python-multipart = "^0.0.5"

# security
pyjwt = "^2.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^3.2.0"
eralchemy = "^1.2.10"
line-bot-sdk = "^1.18.0"
hjson = "^3.0.2"
selenium = "^3.141.0"
pyvirtualdisplay = "^2.0"
bs4 = "^0.0.1"
httpx = "^0.16.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
mypy = "^0.790"
debugpy = "^1.2.1"
pytest = "^6.2.1"
ipykernel = "^5.4.2"
hypothesis = "^6.2.0"
rich = "^9.10.0"
devtools = "^0.6.1"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.11.1"
pyyaml = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



# [tool.pytest.ini_options]
# addopts=-n4